dartagnan/target/generated-sources/antlr4/dartagnan/LitmusX86Parser.java
// Generated from LitmusX86.g4 by ANTLR 4.7

package dartagnan;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LitmusX86Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, LitmusLanguage=19, Mov=20, Xchg=21, Mfence=22, Lfence=23, Sfence=24, 
		Inc=25, Cmp=26, Add=27, Register=28, ThreadIdentifier=29, AssertionExistsNot=30, 
		AssertionExists=31, AssertionFinal=32, AssertionForall=33, LogicAnd=34, 
		LogicOr=35, Identifier=36, DigitSequence=37, Word=38, Whitespace=39, Newline=40, 
		BlockComment=41, ExecConfig=42;
	public static final int
		RULE_main = 0, RULE_header = 1, RULE_headerComment = 2, RULE_variableDeclaratorList = 3, 
		RULE_variableDeclarator = 4, RULE_variableDeclaratorLocation = 5, RULE_variableDeclaratorRegister = 6, 
		RULE_variableDeclaratorRegisterLocation = 7, RULE_variableList = 8, RULE_variable = 9, 
		RULE_threadDeclaratorList = 10, RULE_instructionList = 11, RULE_instructionRow = 12, 
		RULE_instruction = 13, RULE_none = 14, RULE_loadValueToRegister = 15, 
		RULE_loadLocationToRegister = 16, RULE_storeValueToLocation = 17, RULE_storeRegisterToLocation = 18, 
		RULE_mfence = 19, RULE_lfence = 20, RULE_sfence = 21, RULE_exchangeRegisterLocation = 22, 
		RULE_incrementLocation = 23, RULE_compareRegisterValue = 24, RULE_compareLocationValue = 25, 
		RULE_addRegisterRegister = 26, RULE_addRegisterValue = 27, RULE_thread = 28, 
		RULE_r1 = 29, RULE_r2 = 30, RULE_location = 31, RULE_value = 32, RULE_assertionList = 33, 
		RULE_assertion = 34, RULE_assertionListExpectationList = 35, RULE_assertionListExpectation = 36, 
		RULE_assertionListExpectationTest = 37;
	public static final String[] ruleNames = {
		"main", "header", "headerComment", "variableDeclaratorList", "variableDeclarator", 
		"variableDeclaratorLocation", "variableDeclaratorRegister", "variableDeclaratorRegisterLocation", 
		"variableList", "variable", "threadDeclaratorList", "instructionList", 
		"instructionRow", "instruction", "none", "loadValueToRegister", "loadLocationToRegister", 
		"storeValueToLocation", "storeRegisterToLocation", "mfence", "lfence", 
		"sfence", "exchangeRegisterLocation", "incrementLocation", "compareRegisterValue", 
		"compareLocationValue", "addRegisterRegister", "addRegisterValue", "thread", 
		"r1", "r2", "location", "value", "assertionList", "assertion", "assertionListExpectationList", 
		"assertionListExpectation", "assertionListExpectationTest"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "';'", "'}'", "'='", "':'", "'locations'", "'['", "']'", 
		"'|'", "','", "'$'", "'('", "')'", "'with'", "'tso'", "'cc'", "'optic'", 
		"'default'", null, null, null, null, null, null, null, null, null, null, 
		null, null, "'exists'", "'final'", "'forall'", "'/\\'", "'\\/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "LitmusLanguage", "Mov", "Xchg", 
		"Mfence", "Lfence", "Sfence", "Inc", "Cmp", "Add", "Register", "ThreadIdentifier", 
		"AssertionExistsNot", "AssertionExists", "AssertionFinal", "AssertionForall", 
		"LogicAnd", "LogicOr", "Identifier", "DigitSequence", "Word", "Whitespace", 
		"Newline", "BlockComment", "ExecConfig"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LitmusX86.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LitmusX86Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public VariableDeclaratorListContext variableDeclaratorList() {
			return getRuleContext(VariableDeclaratorListContext.class,0);
		}
		public ThreadDeclaratorListContext threadDeclaratorList() {
			return getRuleContext(ThreadDeclaratorListContext.class,0);
		}
		public InstructionListContext instructionList() {
			return getRuleContext(InstructionListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LitmusX86Parser.EOF, 0); }
		public VariableListContext variableList() {
			return getRuleContext(VariableListContext.class,0);
		}
		public AssertionListContext assertionList() {
			return getRuleContext(AssertionListContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			header();
			setState(77);
			variableDeclaratorList();
			setState(78);
			threadDeclaratorList();
			setState(79);
			instructionList();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(80);
				variableList();
				}
			}

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AssertionExistsNot) | (1L << AssertionExists) | (1L << AssertionFinal) | (1L << AssertionForall))) != 0)) {
				{
				setState(83);
				assertionList();
				}
			}

			setState(86);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode LitmusLanguage() { return getToken(LitmusX86Parser.LitmusLanguage, 0); }
		public HeaderCommentContext headerComment() {
			return getRuleContext(HeaderCommentContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(LitmusLanguage);
			setState(89);
			headerComment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderCommentContext extends ParserRuleContext {
		public HeaderCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerComment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitHeaderComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderCommentContext headerComment() throws RecognitionException {
		HeaderCommentContext _localctx = new HeaderCommentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_headerComment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << LitmusLanguage) | (1L << Mov) | (1L << Xchg) | (1L << Mfence) | (1L << Lfence) | (1L << Sfence) | (1L << Inc) | (1L << Cmp) | (1L << Add) | (1L << Register) | (1L << ThreadIdentifier) | (1L << AssertionExistsNot) | (1L << AssertionExists) | (1L << AssertionFinal) | (1L << AssertionForall) | (1L << LogicAnd) | (1L << LogicOr) | (1L << Identifier) | (1L << DigitSequence) | (1L << Word) | (1L << Whitespace) | (1L << Newline) | (1L << BlockComment) | (1L << ExecConfig))) != 0)) {
				{
				{
				setState(91);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==T__0) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorListContext extends ParserRuleContext {
		public List<VariableDeclaratorContext> variableDeclarator() {
			return getRuleContexts(VariableDeclaratorContext.class);
		}
		public VariableDeclaratorContext variableDeclarator(int i) {
			return getRuleContext(VariableDeclaratorContext.class,i);
		}
		public VariableDeclaratorListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitVariableDeclaratorList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorListContext variableDeclaratorList() throws RecognitionException {
		VariableDeclaratorListContext _localctx = new VariableDeclaratorListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclaratorList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__0);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ThreadIdentifier) | (1L << Identifier) | (1L << DigitSequence))) != 0)) {
				{
				setState(98);
				variableDeclarator();
				}
			}

			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(101);
					match(T__1);
					setState(102);
					variableDeclarator();
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(108);
				match(T__1);
				}
			}

			setState(111);
			match(T__2);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(112);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorContext extends ParserRuleContext {
		public VariableDeclaratorLocationContext variableDeclaratorLocation() {
			return getRuleContext(VariableDeclaratorLocationContext.class,0);
		}
		public VariableDeclaratorRegisterContext variableDeclaratorRegister() {
			return getRuleContext(VariableDeclaratorRegisterContext.class,0);
		}
		public VariableDeclaratorRegisterLocationContext variableDeclaratorRegisterLocation() {
			return getRuleContext(VariableDeclaratorRegisterLocationContext.class,0);
		}
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitVariableDeclarator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorContext variableDeclarator() throws RecognitionException {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDeclarator);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				variableDeclaratorLocation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				variableDeclaratorRegister();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				variableDeclaratorRegisterLocation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorLocationContext extends ParserRuleContext {
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableDeclaratorLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorLocation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitVariableDeclaratorLocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorLocationContext variableDeclaratorLocation() throws RecognitionException {
		VariableDeclaratorLocationContext _localctx = new VariableDeclaratorLocationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaratorLocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			location();
			setState(121);
			match(T__3);
			setState(122);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorRegisterContext extends ParserRuleContext {
		public ThreadContext thread() {
			return getRuleContext(ThreadContext.class,0);
		}
		public R1Context r1() {
			return getRuleContext(R1Context.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableDeclaratorRegisterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorRegister; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitVariableDeclaratorRegister(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorRegisterContext variableDeclaratorRegister() throws RecognitionException {
		VariableDeclaratorRegisterContext _localctx = new VariableDeclaratorRegisterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclaratorRegister);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			thread();
			setState(125);
			match(T__4);
			setState(126);
			r1();
			setState(127);
			match(T__3);
			setState(128);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorRegisterLocationContext extends ParserRuleContext {
		public ThreadContext thread() {
			return getRuleContext(ThreadContext.class,0);
		}
		public R1Context r1() {
			return getRuleContext(R1Context.class,0);
		}
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public VariableDeclaratorRegisterLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorRegisterLocation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitVariableDeclaratorRegisterLocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorRegisterLocationContext variableDeclaratorRegisterLocation() throws RecognitionException {
		VariableDeclaratorRegisterLocationContext _localctx = new VariableDeclaratorRegisterLocationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableDeclaratorRegisterLocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			thread();
			setState(131);
			match(T__4);
			setState(132);
			r1();
			setState(133);
			match(T__3);
			setState(134);
			location();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableListContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public VariableListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitVariableList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableListContext variableList() throws RecognitionException {
		VariableListContext _localctx = new VariableListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__5);
			setState(137);
			match(T__6);
			setState(138);
			variable();
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(139);
					match(T__1);
					setState(140);
					variable();
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(146);
				match(T__1);
				}
			}

			setState(149);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public ThreadContext thread() {
			return getRuleContext(ThreadContext.class,0);
		}
		public R1Context r1() {
			return getRuleContext(R1Context.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				location();
				}
				break;
			case ThreadIdentifier:
			case DigitSequence:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				thread();
				setState(153);
				match(T__4);
				setState(154);
				r1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThreadDeclaratorListContext extends ParserRuleContext {
		public List<ThreadContext> thread() {
			return getRuleContexts(ThreadContext.class);
		}
		public ThreadContext thread(int i) {
			return getRuleContext(ThreadContext.class,i);
		}
		public ThreadDeclaratorListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_threadDeclaratorList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitThreadDeclaratorList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThreadDeclaratorListContext threadDeclaratorList() throws RecognitionException {
		ThreadDeclaratorListContext _localctx = new ThreadDeclaratorListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_threadDeclaratorList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			thread();
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(159);
				match(T__8);
				setState(160);
				thread();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionListContext extends ParserRuleContext {
		public List<InstructionRowContext> instructionRow() {
			return getRuleContexts(InstructionRowContext.class);
		}
		public InstructionRowContext instructionRow(int i) {
			return getRuleContext(InstructionRowContext.class,i);
		}
		public InstructionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitInstructionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionListContext instructionList() throws RecognitionException {
		InstructionListContext _localctx = new InstructionListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_instructionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(168);
				instructionRow();
				}
				}
				setState(171); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << Mov) | (1L << Xchg) | (1L << Mfence) | (1L << Lfence) | (1L << Sfence) | (1L << Inc) | (1L << Cmp) | (1L << Add))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionRowContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public InstructionRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionRow; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusX86Visitor ) return ((LitmusX86Visitor<? extends T>)visitor).visitInstructionRow(this);
			else return visitor.visitChildren(this);
		}
	}
